@@ -2,7 +2,7 @@
 
 <span jwcid="$content$">
 
-<div id="tapestryInspector" style="position:absolute;">
+<div id="tapestryInspector" style="position:absolute; visibility: hidden;">
 
 <OBJECT CLASSID="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" 
 	WIDTH="52" HEIGHT="52" 
